<resources>
    <string name="app_name">캔디다이어리</string>
    <string name="app_name2">캔디다이어리</string>
    <string name="splash1">캔디</string>
    <string name="splash2">다</string>
    <string name="splash3">이어리</string>
    <string name="ads_id">ca-app-pub-1405827106256391/9441375016</string>
    <string name="settings">설정</string>
    <string name="detail">더보기</string>
    <string name="main_title">오늘의 추천 요리법 입니다.</string>
    <string name="sub_title">오늘의 추천 식재료 입니다.</string>
    <string name="main_title2">오늘의 추천 식단 입니다.</string>
    <string name="main_title3">오늘의 추천 건강식품 입니다.</string>
    <string name="main_therapy">민간약초 목록입니다.\n(검색 기능도 활용해보세요!)</string>
    <string name="star">즐겨찾기</string>
    <string name="community">커뮤니티</string>
    <string name="statistic">통계보기</string>
    <string name="notice">공지사항</string>
    <string name="profile">프로필</string>
    <string name="logout">로그아웃</string>
    <string name="contact">더보기</string>
    <string name="open">열기</string>
    <string name="close">닫기</string>
    <string name="success">확인</string>
    <string name="confirm_logout">로그아웃 하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="confirm_back">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="navi_main">메인메뉴</string>
    <string name="recipe_sort">조리법 기준으로 보기</string>
    <string name="pet_sort">반려견 집밥 기준으로 보기</string>
    <string name="grocery_sort">식자재 기준으로 보기</string>
    <string name="food_sort">민간약초 기준으로 보기</string>
    <string name="diet_sort">식단 기준으로 보기</string>
    <string name="data_refresh_title">잠시만 기다려주세요.</string>
    <string name="data_refresh">데이터를 가져오는 중입니다&#8230;</string>
    <string name="data_limit">마지막 목록입니다.</string>
    <string name="data_error">앗, 데이터를 가져오는데 실패했습니다. 다시 시도해주세요.</string>
    <string name="statistic_menu">통계보기</string>
    <string name="static_no">앗, 이 식단은 열량 정보가 준비중입니다. 죄송합니다.</string>
    <string name="already_show1">이미 식단 기준으로 선택되어 있습니다.\n찾으시는게 없다면 검색 기능을 활용해보세요.</string>
    <string name="already_show2">이미 민간약초 기준으로 선택되어 있습니다.\n찾으시는게 없다면 검색 기능을 활용해보세요.</string>
    <string name="copyright">Copyright © Seongjae Moon. All rights reserved.</string>
    <string name="forgot_email">가입할 때 입력한 이메일을 작성해주세요.</string>
    <string name="new_account">새로운 계정 만들기</string>
    <string name="forgot_account">회원 정보 찾기</string>
    <string name="google_signin">구글 로그인 성공</string>
    <string name="name_account">이름</string>
    <string name="pw_account">비밀번호</string>
    <string name="email_account">이메일</string>
    <string name="email_confirm">이메일(정확하게 입력해주세요.)</string>
    <string name="regist_account">등록하기</string>
    <string name="pw_account2">비밀번호 확인</string>
    <string name="sign_error">회원 정보를 가져오는 중에 오류가 발생하였습니다. 다시 시도해주세요.</string>
    <string name="no_match">일치하는 회원 정보가 없습니다. 아이디, 회원정보를 확인해주세요.</string>
    <string name="no_match_over">5번 연속 회원 정보를 잘못 입력하였습니다. 회원 정보를 찾아주세요.</string>
    <string name="no_sign_data">올바른 회원 정보를 입력해주세요.</string>
    <string name="login">로그인</string>
    <string name="no_input_satisfy">모든 정보를 입력해주세요.</string>
    <string name="no_match_pw">패스워드가 일치하지 않습니다. 확인해주세요.</string>
    <string name="no_match_email">이메일 형식에 맞지 않습니다. 확인해주세요.</string>
    <string name="exist_email">이미 등록된 이메일입니다. 다시 시도해주세요.</string>
    <string name="pw_short">패스워드가 너무 짧습니다. 6글자 이상을 입력해주세요.</string>
    <string name="resetPwEmail">해당 이메일로 비밀번호 재설정 메일을 전송하였습니다.</string>
    <string name="resetPwEmailFail">확인 메일을 보내는데 실패하였습니다. 다시 시도해주세요.</string>
    <string name="search_hint">#태그, @약초 효능, !식단&#8230;</string>
    <string name="tag_group">태그를 선택하시면 해당 목록이 검색됩니다.</string>
    <string name="search_nothing">앗, 검색 기록을 찾을 수 없습니다. 다른 검색어로 검색해주세요.</string>
    <string name="search_no">앗, 아직 검색 기록이 없습니다.</string>
    <string name="search_rec">이런 건 어떻세요?</string>
    <string name="search_title">님의 글</string>
    <string name="search_text">검색어가 너무 짧습니다!</string>
    <string name="tag_title">개의 태그 검색 목록을 찾았습니다.</string>
    <string name="like">좋아요</string>
    <string name="share">공유</string>
    <string name="comment">댓글</string>
    <string name="com_show">댓글보기</string>
    <string name="web_view">웹으로 보기</string>
    <string name="star_item">즐겨찾기 목록에 추가되었습니다.</string>
    <string name="calrorie_view">열량 정보를 보려면 터치하세요.</string>
    <string name="comment_send">작성하기</string>
    <string name="comment_hint">댓글을 작성해보세요.</string>
    <string name="data_miss">앗, 아직 댓글이 없습니다.\n1등으로 댓글을 작성해보세요!</string>
    <string name="edit_comment">댓글을 작성해주세요.</string>
    <string name="shareTitle">공유하기</string>
    <string name="kakaoShare">카카오톡 공유</string>
    <string name="facebookShare">페이스북 공유</string>
    <string name="kakao_app_key">79b2d08b28694b7d4eabbc5242c912a1</string>
    <string name="kakao_scheme">kakao79b2d08b28694b7d4eabbc5242c912a1</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="noMatchShare">해당 앱이 없습니다. 먼저 해당 앱을 설치해주세요.</string>
    <string name="facebook_app_id">173752019937660</string>
    <string name="shareText">캔디다이어리와 함께 식단관리를 해보세요!</string>
    <string name="recent_title">최근 본 항목</string>
    <string name="donation">pub-1405827106256391</string>
    <string name="admob">ca-app-pub-1405827106256391/6607646045</string>
    <string name="manager">식단관리</string>
    <string name="add_com">추가하기</string>
    <string name="notice_title">이용 약관</string>
    <string name="notice_config">이용 약관 보기</string>
    <string name="permission_title">캔디다이어리에서 요청하는\n앱 권한 목록입니다.</string>
    <string name="need_permission">해당 앱이 기능을 사용할 수 있도록 동의가 필요합니다.</string>
    <string name="privacy_title">개인정보 처리 방침</string>
    <string name="privacy_config">개인정보 처리 방침 보기</string>
    <string name="need_per">필수 권한</string>
    <string name="not_need_per">캔디다이어리 앱은 필수 권한을 요청하지 않습니다.</string>
    <string name="no_need_per">선택 권한</string>
    <string name="is_no_need_per">1.카메라 및 갤러리 접근 권한\n(커뮤니티에 사진을 업로드 하고 식단 정보를 나타내기 위해 사용)\n\n2.내부 저장소 접근 권한\n(통계 및 식단 데이터 백업을 위해 사용)\n\n3.외부 저장소 접근 권한\n(통계 및 식단 데이터 백업을 위해 사용)</string>
    <string name="all_ok">동의를 선택하시면 권한 사용과 더불어 이용 약관 및 개인정보 처리 방침도 읽고 함께 동의한 것으로 간주합니다.</string>
    <string name="agree">동의</string>
    <string name="no_agree">다음에</string>
    <string name="no_permission">권한에 동의하지 않으셨습니다. 권한이 필요한 기능을 사용하실 때는 권한에 동의해주세요!</string>
    <string name="ok_permission">권한에 동의 하셨습니다.</string>
    <string name="go_setting">설정으로 가기</string>
    <string name="pref_version">버전</string>
    <string name="pref_contact">문의하기</string>
    <string name="pref_alaram">알람 설정</string>
    <string name="pref_alaram_sub">알람을 설정하면 여러가지 정보를 받아봅니다.</string>
    <string name="pref_notice">공지사항</string>
    <string name="pref_privacy">개인정보처리방침</string>
    <string name="pref_terms">이용약관</string>
    <string name="pref_opensource">오픈소스 라이센스</string>
    <string name="pref_version_up">버전 업데이트를 하시겠습니까?</string>
    <string name="profile_image">사용자 이미지</string>
    <string name="img_upload_error">이미지 등록 중에 오류가 발생하였습니다. 다시 시도해주세요.</string>
    <string name="progress_image">% 등록중&#8230;</string>
    <string name="upload_image_title">사진을 등록중입니다.</string>
    <string name="update_success">프로필이 성공적으로 변경되었습니다.</string>
    <string name="update_fail">프로필 변경에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="too_short">입력 값이 너무 짧습니다. 다시 시도해주세요.</string>
    <string name="no_validation">입력 값의 형식이 잘못되었습니다. 다시 시도해주세요.</string>
    <string name="pw_change">비밀번호 변경</string>
    <string name="secession">회원 탈퇴</string>
    <string name="noti_name">변경할 이름을 입력해주세요.</string>
    <string name="noti_pw">변경할 비밀번호를 입력해주세요.</string>
    <string name="noti_email">변경할 이메일을 입력해주세요.</string>
    <string name="my_post">나의 포스팅\n</string>
    <string name="star_post">즐겨찾기 포스팅\n</string>
    <string name="diet_and_post">식단을 관리하고 식단을 공유해보세요!</string>
    <string name="post_list">나의 식단 글쓰기 목록</string>
    <string name="secession_confirm">정말로 탈퇴하시겠습니까?</string>
    <string name="secession_delete">정말, 정말.. 정말로요..?</string>
    <string name="secession_delete_ok">회원님의 일부 데이터는 30일간 임시 저장합니다. 다음에 또 만나요 :)</string>
    <string name="diet_post_another">식단 관리 정보를 확인해보세요.</string>
    <string name="post_list_another">님의 식단 글쓰기 목록</string>
    <string name="my_post_another">포스팅\n</string>
    <string name="star_post_another">즐겨찾기 포스팅\n</string>
    <string name="no_star_data">아직 저장된 데이터가 없습니다.\n 관심 있는 식단을 저장해보세요.</string>
    <string name="star_error">즐겨찾기 목록에 저장 중에 오류가 발생하였습니다. 다시 시도해주세요.</string>
    <string name="star_exist">이미 즐겨찾기 목록에 등록되어 있습니다.</string>
    <string name="star_data">즐겨찾기 목록입니다.</string>
    <string name="star_delete">즐겨찾기 목록에서 삭제되었습니다.</string>
    <string name="noti_star_delete">즐겨찾기 목록에서 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>
    <string name="star_default_error">즐겨찾기 목록을 제어 중에 오류가 발생하였습니다.</string>
    <string name="most_popular">HOT한 사용자 목록입니다.</string>
    <string name="post_toolbar">포스팅하기</string>
    <string name="post_img_title">나만의 식단 사진을 등록해보세요.</string>
    <string name="post_add">사진 등록</string>
    <string name="post_title_hint">제목을 작성해주세요.</string>
    <string name="post_desc_hint">설명을 작성해주세요.\n(#으로 태그를 작성할 수 있습니다.)</string>
    <string name="post_hashtag">태그 추가</string>
    <string name="post_regist">등록하기</string>
    <string name="add_tags">태그를 작성해보세요.</string>
    <string name="choose_cam_title">업로드할 이미지 선택</string>
    <string name="choose_cam1">갤러리에서 선택</string>
    <string name="choose_cam2">사진 촬영</string>
    <string name="choose_pic">사진은 5개까지 선택 가능합니다.</string>
    <string name="choose_error">사진을 선택하는 도중 오류가 발생하였습니다. 다시 시도해주세요.</string>
    <string name="choose_remove">선택된 사진을 등록 취소하였습니다.</string>
    <string name="need_title">제목은 필수 입력란입니다.</string>
    <string name="need_photo">사진을 한 장 이상 업로드 해주세요.</string>
    <string name="upload_post_title">포스팅을 등록중입니다.</string>
    <string name="upload_post_fail">포스팅 등록에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="upload_post_success">정상적으로 포스팅 되었습니다.</string>
    <string name="more">더보기</string>
    <string name="star_post_click1">해당 포스트를 즐겨찾기 목록에 추가하였습니다.</string>
    <string name="star_post_click2">해당 포스트를 즐겨찾기 목록에서 삭제하였습니다.</string>
    <string name="confrim_delete">해당 포스팅을 삭제하시겠습니까?</string>
    <string name="fail_delete_post">해당 포스팅를 삭제하는 도중 오류가 발생하였습니다. 잠시후 다시 시도해주세요.</string>
    <string name="success_delete">해당 포스팅이 삭제되었습니다.</string>
    <string name="declaration">신고</string>
    <string name="declaration_post">신고하기</string>
    <string name="declaration_noti">해당 포스팅을 신고합니다.</string>
    <string name="declaration_user">해당 사용자를 신고합니다.</string>
    <string name="retry_photo">앗, 사진을 다시 선택하시겠습니까?</string>
    <string name="declaration_success">신고가 접수되었습니다. 검수 후 조치합니다.</string>
    <string name="menu_month">월간</string>
    <string name="menu_week">주간</string>
    <string name="menu_day">일간</string>
    <string name="menu_today">오늘</string>
    <string name="menu_agenda">글목록</string>
    <string name="sort_stat">통계표로 보기</string>
    <string name="sort_cal">달력으로 보기</string>
    <string name="pulldown_refreshing">불러오는 중&#8230;</string>
    <string name="pulldown_pull">로딩 중</string>
    <string name="pulldown_release">저장 완료</string>
    <string name="calendar_item_new_count">%d개</string>
    <string name="stat_title">식단 정보 입력</string>
    <string name="stat_input">식단 입력하기</string>
    <string name="stat_modify">식단 수정하기</string>
    <string name="stat_delete">식단 삭제하기</string>
    <string name="delete_error">삭제 도중 오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="hint_diet">식단을 검색합니다.</string>
    <string name="hint_with">누구와 함께 했나요?</string>
    <string name="hint_start">식사 시작 시간</string>
    <string name="hint_end">식사 종료 시간</string>
    <string name="hint_search">식품명을 입력해주세요.</string>
    <string name="no_data_diet">식단 정보는 필수 입력 정보입니다.</string>
    <string name="no_data_time">시작, 종료 시간은 필수 입력 정보입니다.</string>
    <string name="diet_data_error">식단 정보를 가져오는데 문제가 있습니다. 다시 시도해주세요.</string>
    <string name="no_data_error">정보를 저장하는데 문제가 있습니다. 다시 시도해주세요.</string>
</resources>