<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PermissionActivity">
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/per_title"
        android:text="@string/permission_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_marginTop="10dp"
        android:id="@+id/sep0"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/needText"
        android:text="@string/need_per"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/needPer"
        android:text="@string/not_need_per"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_marginTop="10dp"
        android:id="@+id/sep1"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/no_need_per"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/chooseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/choosePer"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:text="@string/is_no_need_per"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_marginTop="5dp"
        android:id="@+id/sep2"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/noticeText"
            android:textColor="@color/colorBlueDark"
            android:text="@string/notice_config"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/privacyText"
            android:textColor="@color/colorBlueDark"
            android:text="@string/privacy_config"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/allOk"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/all_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:text="@string/agree"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/okBtn"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>