<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <group
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never">
        <item
            android:id="@+id/action_month"
            android:orderInCategory="100"
            android:title="@string/menu_month"
            app:showAsAction="never" />

        <!--<item-->
            <!--android:id="@+id/action_week"-->
            <!--android:orderInCategory="200"-->
            <!--android:title="@string/menu_week"-->
            <!--app:showAsAction="never" />-->

        <item
            android:id="@+id/action_day"
            android:orderInCategory="300"
            android:title="@string/menu_day"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_today"
            android:orderInCategory="400"
            android:title="@string/menu_today"
            app:showAsAction="never"/>
    </group>
    <!--<item-->
        <!--android:id="@+id/change_view"-->
        <!--android:icon="@drawable/ic_menu_black_18dp"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/sort_stat"-->
        <!--app:showAsAction="always|collapseActionView" />-->
</menu>