<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ForgotActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorAccent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/forgot_account"
        android:id="@+id/forgotTitle"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/forgot_email"
        android:id="@+id/forgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="15dp"
        android:text="@string/success"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>