<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/signUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signUpEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/tv_style"
            android:ems="10"
            android:hint="@string/name_account"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused" />

        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signUpPW"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/tv_style"
            android:ems="10"
            android:hint="@string/email_account"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused" />

        <EditText
            android:id="@+id/signUpPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signUpPW2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/tv_style"
            android:ems="10"
            android:hint="@string/pw_account2"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused" />

        <EditText
            android:id="@+id/signUpPW2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnSignUp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/tv_style"
            android:ems="10"
            android:hint="@string/pw_account"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@color/common_google_signin_btn_text_light_focused" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn_style"
            android:text="@string/regist_account"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text=""
            android:layout_below="@+id/textView"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:text="@string/new_account"
            android:textSize="30sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>